tests/NormalTests/paczka1/small_fuzzy/89372297.err
Error in line 12: IXMqMMcO95 A372 3,0
Error in line 15: IXMqMMcO9d A12d d9,9
